--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,21 +10,25 @@ services:
       dockerfile: Dockerfile
     networks:
       - traefiknet
+      - pgnet
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=traefiknet"
       - "traefik.frontend.rule=Host:dapur-online-akuntansi-api.luqmanul.com"
-      - "traefik.port=8081"
+      - "traefik.port=8080"
       - "traefik.protocol=http"
       - "traefik.frontend.redirect.entryPoint=https"
     environment: 
       - GO_ENV=production
       - DB_HOST=svr-aura.luqmanul.com
-      - DB_PORT=3312
-      - DB_USER=root
+      - DB_PORT=5432
+      - DB_USER=hakim
       - DB_PASS=x83zR3wfTNwZ4zGU
       - DB_SCHEMA=dapur_online_akutansi
 
 networks:
   traefiknet:
-    driver: bridge
+    external: true
+  pgnet:
+    external: true
+
